# pvsolarsim

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLANNING.md  PR3_TEST_RESULTS.md  PRODUCT_REQUIREMENTS.md  README.md  copilot-instructions.md  coverage.xml  mypy.ini  pyproject.toml  test_pr1.py  test_pr2.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
docs/: WEATHER_DATA_GUIDE.md
docs/implementation/: CI_CD_FIX_SUMMARY.md  PR4_TEST_RESULTS.md  PR5_TEST_RESULTS.md  README.md  WEEK6_IMPLEMENTATION_SUMMARY.md  WEEK7_IMPLEMENTATION_SUMMARY.md
examples/: README.md  annual_simulation_example.py  basic_example.py  integration_example.py  poa_example.py  power_calculation_example.py  temperature_example.py  weather_integration_example.py  weather_quality_example.py
src/pvsolarsim/: __init__.py  power.py
src/pvsolarsim/api/: highlevel.py
src/pvsolarsim/atmosphere/: __init__.py  clearsky.py  cloudcover.py
src/pvsolarsim/core/: location.py  pvsystem.py
src/pvsolarsim/irradiance/: __init__.py  poa.py
src/pvsolarsim/simulation/: __init__.py  engine.py  results.py  timeseries.py
src/pvsolarsim/solar/: __init__.py  position.py
src/pvsolarsim/temperature/: __init__.py  models.py
src/pvsolarsim/weather/: __init__.py  api_clients.py  base.py  cache.py  interpolation.py  quality.py  readers.py
tests/: test_clearsky.py  test_cloudcover.py  test_location.py  test_poa.py  test_power.py  test_pvsystem.py  test_simulation_engine.py  test_simulation_results.py  test_solar_position.py  test_temperature.py  test_timeseries.py  test_weather_base.py  test_weather_cache.py  test_weather_interpolation.py  test_weather_quality.py  test_weather_readers.py
tests/integration/: README.md  test_pr1.py  test_pr2.py  test_pr3.py  test_pr4.py  test_pr5.py  test_pr6.py
